--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - pytest tests/integration -v
 dist: xenial
 before_install:
-  - export TALKER_VERSION=$(cat VERSION)
+  - export TALKER_AGENT_VERSION=$(cat VERSION)
   - cd tests/integration
   - export TALKER_HOST_ID=MyHostId
   - docker-compose up --no-start
