--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -8,5 +8,7 @@ services:
       args:
         - TALKER_AGENT_VERSION=$TALKER_AGENT_VERSION
         - TALKER_HOST_ID=$TALKER_HOST_ID
+    volumes:
+      - /var/log:/var/log
     links:
       - redis
