agent: refactor talker.py - split to modules

--- a/talker_agent/Dockerfile
+++ b/talker_agent/Dockerfile
@@ -4,13 +4,15 @@ FROM python:3.7-alpine
 ARG TALKER_AGENT_VERSION
 ARG TALKER_HOST_ID
 
-RUN mkdir -p /root/talker
+RUN mkdir -p /root/talker/talker_agent
 WORKDIR /root/talker
 
 RUN echo {\"password\": null, \"port\": 6379, \"host\": \"redis\", \"host_id\": \"$TALKER_HOST_ID\"} > conf.json
-COPY talker.py talker-service install_agent.sh ./
+COPY __init__.py agent.py config.py job.py talker.py utils.py install_agent.sh talker_agent/
 
 RUN apk add --no-cache curl bash
-RUN chmod +x install_agent.sh && ./install_agent.sh
+RUN chmod +x talker_agent/install_agent.sh && talker_agent/install_agent.sh
 
-CMD ["python", "talker.py"]
+ENV PYTHONPATH=.
+
+CMD ["python", "talker_agent/talker.py"]
