--- a/talker_agent/Dockerfile
+++ b/talker_agent/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:2.7-slim-buster
 
 #args from docker-compose.yaml
-ARG TALKER_AGENT_VERSION
-ARG TALKER_HOST_ID
+ARG TALKER_AGENT_RELEASE
 
 RUN mkdir -p /root/talker
 WORKDIR /root/talker
@@ -10,7 +9,6 @@ WORKDIR /root/talker
 RUN apt-get update -y && apt-get install curl locales -y
 RUN echo "LC_ALL=en_US.UTF-8" >> /etc/environment && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && echo "LANG=en_US.UTF-8" > /etc/locale.conf
 RUN locale-gen en_US.UTF-8
-RUN echo {\"password\": null, \"port\": 6379, \"host\": \"redis\", \"host_id\": \"$TALKER_HOST_ID\"} > conf.json
 
 COPY install_agent.sh ./
 RUN chmod +x install_agent.sh && ./install_agent.sh
@@ -20,7 +18,6 @@ RUN chmod +x /etc/init.d/talker
 RUN ln -s /usr/local/bin/python /usr/bin/python
 RUN update-rc.d talker defaults
 
-COPY talker.py ./
-RUN chmod +x talker.py
+COPY config.ini ./
 
 CMD service talker start && tail -f /dev/null
