tests.integration: squash docker file commands

--- a/talker_agent/Dockerfile
+++ b/talker_agent/Dockerfile
@@ -8,17 +8,20 @@ RUN mkdir -p /root/talker
 WORKDIR /root/talker
 
 RUN apt-get update -y && apt-get install curl locales -y
-RUN echo "LC_ALL=en_US.UTF-8" >> /etc/environment && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && echo "LANG=en_US.UTF-8" > /etc/locale.conf
-RUN locale-gen en_US.UTF-8
+RUN echo "LC_ALL=en_US.UTF-8" >> /etc/environment && \
+    echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && \
+    echo "LANG=en_US.UTF-8" > /etc/locale.conf && \
+    locale-gen en_US.UTF-8
+
 RUN echo {\"password\": null, \"port\": 6379, \"host\": \"redis\", \"host_id\": \"$TALKER_HOST_ID\"} > conf.json
 
 COPY install_agent.sh ./
 RUN chmod +x install_agent.sh && ./install_agent.sh
 
 COPY talker-service /etc/init.d/talker
-RUN chmod +x /etc/init.d/talker
-RUN ln -s /usr/local/bin/python /usr/bin/python
-RUN update-rc.d talker defaults
+RUN chmod +x /etc/init.d/talker && \
+    ln -s /usr/local/bin/python /usr/bin/python && \
+    update-rc.d talker defaults
 
 COPY talker.py ./
 RUN chmod +x talker.py
