agent.redis move redis configuration to ini file

--- a/talker_agent/config.ini
+++ b/talker_agent/config.ini
@@ -4,6 +4,10 @@ host_id = MyHostId
 [redis]
 host = redis
 port = 6379
+socket_timeout = 120
+socket_connect_timeout = 60
+retry_on_timeout = True
+health_check_interval = 30
 
 [logging]
 logpath = /var/log/talker.log
