--- a/talker_agent/config.ini
+++ b/talker_agent/config.ini
@@ -4,6 +4,9 @@ host_id = MyHostId
 [redis]
 host = redis
 port = 6379
+socket_timeout = 10
+retry_on_timeout = True
+health_check_interval = 30
 
 [logging]
 logpath = /var/log/talker.log
